Added cert hole validation
